crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__negate_parens.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "-(a)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Var(
                "a",
            ),
        },
    ),
}
