crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__negate_var.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "-x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "x",
            ),
        },
    ),
}
