crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__negation_in_parens.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\n(-42)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 3,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Int(
                42,
            ),
        },
    ),
}
