crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__not_var.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "!ready"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Not(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var(
                "ready",
            ),
        },
    ),
}
